--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,577 +1,843 @@
-/* Global Styles */
+
 :root {
+
   --primary-color: #17a2b8;
+
   --dark-color: #343a40;
+
   --light-color: #f4f4f4;
+
   --danger-color: #dc3545;
+
   --success-color: #28a745;
+
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+.sidenav{
+
+  background-color:white;
+
 }
 
-body {
-  font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
-  line-height: 1.6;
-  background-color: #fff;
-  color: #333;
+#nav-logo{
+
+  color: #039be5!important;
+
 }
 
-a {
-  color: var(--primary-color);
-  text-decoration: none;
+.sidenav-trigger i{
+
+  color:#039be5!important;
+
 }
 
-ul {
-  list-style: none;
+.loader {
+
+  position: absolute;
+
+  top: 40%;
+
+  left: 47%;
+
 }
 
-img {
-  width: 100%;
+#CYP i{font-size:2.2rem;}
+
+#sif{padding-bottom:1.5rem;font-size:1.5rem;}
+
+#SI i{font-size:1.2rem}
+
+#hu{
+
+  padding-bottom:1.5rem;font-size:1.5rem;
+
 }
 
-/* Utilities */
-.container {
-  max-width: 1100px;
-  margin: auto;
-  overflow: hidden;
-  padding: 0 2rem;
-  margin-top: 6rem;
-  margin-bottom: 3rem;
+#g{padding:15px 0px 15px 15px;}
+
+#supr{margin: 2.52rem 0 1.912rem 0;}
+
+.login {
+
+  margin-top: 70px;
+
+  margin-bottom: 70px;
+
 }
 
-/* Text Styles*/
-.x-large {
-  font-size: 4rem;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-}
+#defs{margin:10px auto;}
 
-.large {
-  font-size: 3rem;
-  line-height: 1.2;
-  margin-bottom: 1rem;
-}
+#defs button{margin:10px auto}
 
-.lead {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
+#buf{padding:40px 0 40px 0;}
 
-.text-center {
-  text-align: center;
-}
+#buf h2{margin:0 0 0 0;padding-bottom:10px}
 
-.text-primary {
-  color: var(--primary-color);
-}
+#buf h5{padding-bottom:0px}
 
-.text-dark {
-  color: var(--dark-color);
-}
+#buf p{padding-bottom:10px}
 
-/* Padding */
-.p {
-  padding: 0.5rem;
-}
-.p-1 {
-  padding: 1rem;
-}
-.p-2 {
-  padding: 2rem;
-}
-.p-3 {
-  padding: 3rem;
-}
-.py {
-  padding: 0.5rem 0;
-}
-.py-1 {
-  padding: 1rem 0;
-}
-.py-2 {
-  padding: 2rem 0;
-}
-.py-3 {
-  padding: 3rem 0;
-}
+#ch{background-color:#f4f4f4;padding:40px 0 40px 0;}
 
-/* Margin */
-.m {
-  margin: 0.5rem;
-}
-.m-1 {
-  margin: 1rem;
-}
-.m-2 {
-  margin: 2rem;
-}
-.m-3 {
-  margin: 3rem;
-}
-.my {
-  margin: 0.5rem 0;
-}
-.my-1 {
-  margin: 1rem 0;
-}
-.my-2 {
-  margin: 2rem 0;
-}
-.my-3 {
-  margin: 3rem 0;
-}
+#ch ul{display:flex;justify-content:center;margin:20px auto}
 
-.btn {
-  display: inline-block;
-  background: var(--light-color);
-  color: #333;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  margin-right: 0.5rem;
-  transition: opacity 0.2s ease-in;
-  outline: none;
+#ch divider{width:75%;margin:40px auto}
+
+#madar{margin:20px auto}
+
+#set{border: #ccc solid 1px; padding:10px;}
+
+#seet{border: #ccc solid 1px; padding:10px;}
+
+#gt .row{
+
+  background-color:#f4f4f4;
+
+  padding-top:4px;
+
+  margin-bottom:20px;
+
+  margin-top:5px;
+
 }
 
 .badge {
-  font-size: 0.8rem;
-  padding: 0.1rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: var(--light-color);
-  color: #333;
+
+    font-size:1.2rem;
+
+    padding: 0.1rem;
+
+    text-align: center;
+
+    margin: 0.3rem;}
+
+.btn-extended {
+
+  display: block;
+
+  width: 80%;
+
+  margin: auto;
+
+  margin-top: 20px;
+
 }
 
-.alert {
-  padding: 0.8rem;
+#particles-js {
+
+  position: absolute;
+
+  width: 100%;
+
+  height: 100%;
+
+  background-repeat: no-repeat;
+
+  background-size: cover;
+
+  background-position: 50% 50%;
+
+  z-index: 1;
+
+}
+
+.main{
+
+  position: absolute;
+
+  top: 0;
+
+  width: 100%;
+
+}
+
+.main1 .SI{
+
+  position: absolute;
+
+ 
+
+  bottom: 50%;
+
+  width: 100%;
+
+}
+
+#canvas{
+
+  position: relative;
+
+  height:1280px!important;
+
+  max-width: 100%;
+
+}
+
+html,body{
+
+  height: 100%;
+
+  width: 100%;
+
+}
+
+#land{
+
+  background-image: url('https://www.marcoguglie.it/Codepen/AnimatedHeaderBg/demo-1/img/demo-1-bg.jpg');
+
+}
+
+body{
+
+  color:black;
+
+}
+
+.selectinput{
+
+  color:white!important;
+
+}
+
+#login-page {
+
+   width: 500px;
+
+}
+
+.datepicker-day-button{
+
+  color:black!important;
+
+}
+
+.is-disabled{
+
+  color:red!important;
+
+}
+
+input:not([type]):focus:not([readonly])+label, input[type=text]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label{
+
+  color:#039be5!important;
+
+}
+
+.input-field input[type]:focus, .materialize-textarea:focus:not([readonly]) {
+
+border-bottom: 1px solid #039be5!important;
+
+box-shadow: 0 1px 0 0 #039be5!important;
+
+}
+
+textarea.materialize-textarea:focus:not([readonly]){
+
+  color:#039be5!important;
+
+}
+
+textarea.materialize-textarea:focus:not([readonly])+label{
+
+  color:#039be5!important;
+
+}
+
+.collapsible li{
+
+  color:black!important;
+
+}
+
+.cont {
+
+  padding: 0 18px;
+
+  display: none;
+
+  overflow: hidden;
+
+  background-color: #f1f1f1;
+
+}
+
+.card {
+
+     position: absolute;
+
+     left: 50%;
+
+     top: 50%;
+
+     -moz-transform: translate(-50%, -50%);
+
+     -webkit-transform: translate(-50%, -50%);
+
+     -ms-transform: translate(-50%, -50%);
+
+     -o-transform: translate(-50%, -50%);
+
+     transform: translate(-50%, -50%);
+
+}
+
+.exp{
+
+    width:80px;
+
+    height:80px;
+
+    background-color:white;
+
+    border-radius:100%;
+
+    line-height:80px;
+
+    text-align:center;
+
+    vertical-align:middle;
+
+    display:inline-block;
+
+}
+
+.expsi{
+
+    width:50px;
+
+    height:50px;
+
+    background-color:white;
+
+    border-radius:100%;
+
+    line-height:50px;
+
+    text-align:center;
+
+    vertical-align:middle;
+
+    display:inline-block;
+
+}
+
+.lead.c2{
+
+  padding-left:3%;
+
+}
+
+i.ep{
+
+    text-align:center;
+
+    vertical-align:middle;
+
+    display:inline-block;
+
+    font-size:2.2rem;
+
+}
+
+#face{
+
+  width: 30px;
+
+  height: 30px;
+
+  line-height:30px;
+
+  text-align:center;
+
+  vertical-align:middle;
+
+  display:inline-block;
+
+  font-size: 1.5rem
+
+}
+
+#person { line-height: inherit;font-size: 4rem;color:#039be5!important}
+
+.start{
+
+  padding-top: 4%;
+
+  left:-50px;
+
+}
+
+.container{
+
+  overflow:hidden;
+
+}
+
+@media (max-width: 576px) {
+
+  #nav-logo{
+
+    font-size: 1.2rem;
+
+  }
+
+  #CYP h2{
+
+    font-size:2.5rem ;
+
+  }
+
+  #CYP h4{
+
+    font-size:1.4rem;
+
+  }
+
+}
+
+@media(max-width :425px){
+
+  .SI h1{
+
+    font-size: 2rem;
+
+  }
+
+  .SI h5{
+
+    font-size: 1rem;
+
+  }
+
+ 
+
+}
+
+ 
+
+@media (min-width: 1024px){
+
+  #nav-logo{
+
+    left:2%
+
+  }
+
+}
+
+.dropdown-content li>a, .dropdown-content li>span{
+
+  color: black!important;
+
+}
+
+input{
+
+  color:#039be5!important;
+
+}
+
+label{
+
+  font-size:1.2rem!important;
+
+}
+
+.Si{
+
+  padding-left:5%!important
+
+}
+
+.collection li{
+
+  color: black!important;
+
+  border: none!important;
+
+}
+
+button:focus{
+
+  background-color: white!important;
+
+}
+
+ul.collection{
+
+  border:none!important;
+
+}
+
+.collapsible{
+
+  border:none!important;
+
+}
+
+.collapsible-header{
+
+  border-radius: 15px;
+
+}
+
+.collapsible-body{
+
+  background-color: white;
+
+}
+
+#d{width: 40%!important;}
+
+#bx{
+
+  border:#ccc solid 1px;
+
+}
+
+#im{
+
+  padding-top: 4%;
+
+}
+
+#lod{
+
+  padding-bottom: 28px;
+
+  justify-content:left;
+
+}
+
+#h h3{
+
+  margin-bottom: 0;
+
+}
+
+#cr {
+
+  max-width: 1100px;
+
+  margin: auto;
+
+  overflow: hidden;
+
+  padding: 0 2rem;
+
+  margin-top: 6rem;
+
+  margin-bottom: 3rem;
+
+}
+
+.p {
+
+  padding: 0.5rem;
+
+}
+
+.p-1 {
+
+  padding: 1rem;
+
+}
+
+.p-2 {
+
+  padding: 2rem;
+
+}
+
+.p-3 {
+
+  padding: 3rem;
+
+}
+
+.py {
+
+  padding: 0.5rem 0;
+
+}
+
+.py-1 {
+
+  padding: 1rem 0;
+
+}
+
+.py-2 {
+
+  padding: 2rem 0;
+
+}
+
+.py-3 {
+
+  padding: 3rem 0;
+
+}
+
+ 
+
+/* Margin */
+
+.m {
+
+  margin: 0.5rem;
+
+}
+
+.m-1 {
+
+  margin: 1rem;
+
+}
+
+.m-2 {
+
+  margin: 2rem;
+
+}
+
+.m-3 {
+
+  margin: 3rem;
+
+}
+
+.my {
+
+  margin: 0.5rem 0;
+
+}
+
+.my-1 {
+
   margin: 1rem 0;
-  opacity: 0.9;
-  background: var(--light-color);
-  color: #333;
+
 }
 
-.btn-primary,
-.bg-primary,
-.badge-primary,
-.alert-primary {
-  background: var(--primary-color);
-  color: #fff;
+.my-2 {
+
+  margin: 2rem 0;
+
 }
 
-.btn-light,
-.bg-light,
-.badge-light,
-.alert-light {
-  background: var(--light-color);
-  color: #333;
+.my-3 {
+
+  margin: 3rem 0;
+
 }
 
 .btn-dark,
+
 .bg-dark,
+
 .badge-dark,
+
 .alert-dark {
+
   background: var(--dark-color);
-  color: #fff;
-}
 
-.btn-danger,
-.bg-danger,
-.badge-danger,
-.alert-danger {
-  background: var(--danger-color)!important;
   color: #fff;
-}
 
-.btn-success,
-.bg-success,
-.badge-success,
-.alert-success {
-  background: var(--success-color);
-  color: #fff;
 }
 
 .btn-white,
+
 .bg-white,
+
 .badge-white,
+
 .alert-white {
+
   background: #fff;
+
   color: #333;
+
   border: #ccc solid 1px;
+
 }
 
-.btn:hover {
-  opacity: 0.8;
-}
-
-.bg-light,
-.badge-light {
-  border: #ccc solid 1px;
-}
-
-.round-img {
-  border-radius: 50%;
-}
-
-.line {
-  height: 1px;
-  background: #ccc;
-  margin: 1.5rem 0;
-}
-
-/* Overlay */
-.dark-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-/* Forms */
-.form .form-group {
-  margin: 1.2rem 0;
-}
-
-.form .form-text {
-  display: block;
-  margin-top: 0.3rem;
-  color: #888;
-}
-
-.form input[type='text'],
-.form input[type='email'],
-.form input[type='password'],
-.form input[type='date'],
-.form select,
-.form textarea {
-  display: block;
-  width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
-}
-
-.form input[type='submit'],
-button {
-  font: inherit;
-}
-
-.form .social-input {
-  display: flex;
-}
-
-.form .social-input i {
-  padding: 0.5rem;
-  width: 4rem;
-}
-
-.form .social-input i.fa-twitter {
-  color: #38a1f3;
-}
-.form .social-input i.fa-facebook {
-  color: #3b5998;
-}
-.form .social-input i.fa-instagram {
-  color: #3f729b;
-}
-.form .social-input i.fa-youtube {
-  color: #c4302b;
-}
-.form .social-input i.fa-linkedin {
-  color: #0077b5;
-}
-
-.table th,
-.table td {
-  padding: 1rem;
-  text-align: left;
-}
-
-.table th {
-  background: var(--light-color);
-}
-
-/* Navbar */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.7rem 2rem;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  top: 0;
-  border-bottom: solid 1px var(--primary-color);
-  opacity: 0.9;
-}
-
-.navbar ul {
-  display: flex;
-}
-
-.navbar a {
-  color: #fff;
-  padding: 0.45rem;
-  margin: 0 0.25rem;
-}
-
-.navbar a:hover {
-  color: var(--primary-color);
-}
-
-.navbar .welcome span {
-  margin-right: 0.6rem;
-}
-
-/* Landing Page */
-.landing {
-  position: relative;
-  background: url('./img/showcase.jpg') no-repeat center center/cover;
-  height: 100vh;
-}
-
-.landing-inner {
-  color: #fff;
-  height: 100%;
-  width: 80%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-/* Profiles Page */
-.profile {
-  display: grid;
-  grid-template-columns: 2fr 4fr 2fr;
-  align-items: center;
-  grid-gap: 2rem;
-  padding: 1rem;
-  line-height: 1.8;
-  margin-bottom: 1rem;
-}
-
-/* Profile Page */
-.profile-grid {
-  display: grid;
-  grid-template-areas:
-    'top top'
-    'about about'
-    'exp edu'
-    'github github';
-  grid-gap: 1rem;
-}
-
-.profile-top {
-  grid-area: top;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.profile-top img {
-  width: 250px;
-}
-
-.profile-top .icons a {
-  color: #fff;
-  margin: 0 0.3rem;
-}
-
-.profile-top .icons a:hover {
-  color: var(--dark-color);
-}
-
-.profile-about {
-  grid-area: about;
-  text-align: center;
-}
-
-.profile-about .skills {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.profile-exp {
-  grid-area: exp;
-}
-
-.profile-edu {
-  grid-area: edu;
-}
-
-.profile-exp h2,
-.profile-edu h2 {
-  margin-bottom: 1rem;
-}
-
-.profile-exp > div,
-.profile-edu > div {
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: #ccc 1px dotted;
-}
-
-.profile-exp > div:last-child,
-.profile-edu > div:last-child {
-  border: 0;
-}
-
-.profile-exp p,
-.profile-edu p {
-  margin: 0.5rem 0;
-}
-
-.profile-github {
-  grid-area: github;
-}
-
-.profile-github .repo {
-  display: flex;
-}
-
-.profile-github .repo > div:first-child {
-  flex: 7;
-  flex-basis: 70%;
-}
-
-.profile-github > div:last-child {
-  flex: 3;
-  flex-basis: 20%;
-}
-
-/* Posts Page */
 .post-form .post-form-header {
+
   background: var(--primary-color);
+
   padding: 0.5rem;
+
 }
+
+ 
 
 .post {
+
   display: grid;
+
   grid-template-columns: 1fr 4fr;
+
   grid-gap: 2rem;
+
   align-items: center;
+
 }
+
+ 
 
 .post > div:first-child {
+
   text-align: center;
+
 }
+
+ 
 
 .post img {
+
   width: 100px;
+
 }
+
+ 
 
 .post .comment-count {
+
   background: var(--light-color);
+
   color: var(--primary-color);
+
   padding: 0.1rem 0.2rem;
+
   border-radius: 5px;
+
   font-size: 0.8rem;
+
 }
+
+ 
 
 .post .post-date {
+
   color: #aaa;
+
   font-size: 0.8rem;
+
   margin-bottom: 0.5rem;
+
 }
 
-/* Mobile Styles */
-@media (max-width: 700px) {
-  .container {
-    margin-top: 8rem;
-  }
+.bg-primary{  color: #fff;}
 
-  .hide-sm {
-    display: none;
-  }
+ 
 
-  /* Text Styles */
-  .x-large {
-    font-size: 3rem;
-  }
+.btn-primary,
 
-  .large {
-    font-size: 2rem;
-  }
+.bg-primary,
 
-  .lead {
-    font-size: 1rem;
-  }
+.badge-primary,
 
-  /* Navbar */
-  .navbar {
-    display: block;
-    text-align: center;
-  }
+.alert-primary {
 
-  .navbar ul {
-    text-align: center;
-    justify-content: center;
-  }
+  background: var(--primary-color);
 
-  .navbar h1 {
-    margin-bottom: 1rem;
-  }
+  color: #fff;
 
-  .navbar .welcome {
-    display: none;
-  }
-
-  /* Profiles Page */
-  .profile {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-
-  .profile ul {
-    display: none;
-  }
-
-  /* Profile Page */
-
-  .profile-top img,
-  .profile img {
-    width: 200px;
-    margin: auto;
-  }
-
-  .profile-grid {
-    grid-template-areas:
-      'top'
-      'about'
-      'exp'
-      'edu'
-      'github';
-  }
-
-  .profile-about .skills {
-    flex-direction: column;
-  }
-
-  .dash-buttons a {
-    display: block;
-    width: 100%;
-    margin-bottom: 0.2rem;
-  }
-
-  .post {
-    grid-template-columns: 1fr;
-  }
-  .post a,
-  .post button {
-    padding: 0.3rem 0.4rem;
-  }
 }
+
+ 
+
+.btn-light,
+
+.bg-light,
+
+.badge-light,
+
+.alert-light {
+
+  background: var(--light-color);
+
+  color: #333;
+
+}
+
+ 
+
+.btn-dark,
+
+.bg-dark,
+
+.badge-dark,
+
+.alert-dark {
+
+  background: var(--dark-color);
+
+  color: #fff;
+
+}
+
+.btn-danger,
+
+.bg-danger,
+
+.badge-danger,
+
+.alert-danger {
+
+  background: var(--danger-color);
+
+  color: #fff;
+
+}
+
+ 
+
+.btn-success,
+
+.bg-success,
+
+.badge-success,
+
+.alert-success {
+
+  background: var(--success-color);
+
+  color: #fff;
+
+}
+
+ 
+
+.btn-white,
+
+.bg-white,
+
+.badge-white,
+
+.alert-white {
+
+  background: #fff;
+
+  color: #333;
+
+  border: #ccc solid 1px;
+
+}
+
+.text-primary {
+
+  color: var(--primary-color);
+
+}
+
+ 
+
+.text-dark {
+
+  color: var(--dark-color);
+
+}
+
+
+
